// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a different color 1`] = `
<styles__ButtonStyled
  color="pink"
  onClick={[Function]}
>
  <div>
    Hello
  </div>
</styles__ButtonStyled>
`;

exports[`renders correctly with children 1`] = `
<styles__ButtonStyled
  color="blue"
  onClick={[Function]}
>
  <div>
    Hello
  </div>
  <div>
    World
  </div>
</styles__ButtonStyled>
`;
